--- a/index.html
+++ b/index.html
@@ -3,16 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descarga tus Cartones de Bingo</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Modern Image Carousel</title>
+    <style>
+        * { box-sizing: border-box; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        .carousel {
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+        .carousel-images {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+        .carousel-images img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .carousel-buttons {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            transform: translateY(-50%);
+        }
+        .carousel-buttons button {
+            background-color: rgba(0, 0, 0, 0.5);
+            border: none;
+            color: white;
+            padding: 10px;
+            cursor: pointer;
+        }
+        .carousel-buttons button:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        .carousel-indicators {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+        .carousel-indicators div {
+            width: 10px;
+            height: 10px;
+            background-color: #bbb;
+            border-radius: 50%;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+        .carousel-indicators .active {
+            background-color: #717171;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Descarga tus Cartones de Bingo</h1>
-        <p>Selecciona un cartón para descargar.</p>
-    </header>
-    <section class="card-container">
-        <!-- Aquí se insertarán los cartones mediante Python -->
-    </section>
+
+<div class="carousel">
+    <div class="carousel-images">
+        <img src="image1.jpg" alt="Image 1">
+        <img src="image2.jpg" alt="Image 2">
+        <img src="image3.jpg" alt="Image 3">
+    </div>
+    <div class="carousel-buttons">
+        <button id="prev">&#10094;</button>
+        <button id="next">&#10095;</button>
+    </div>
+    <div class="carousel-indicators">
+        <div class="active"></div>
+        <div></div>
+        <div></div>
+    </div>
+</div>
+
+<script>
+    const images = document.querySelector('.carousel-images');
+    const indicators = document.querySelectorAll('.carousel-indicators div');
+    let index = 0;
+
+    function showImage(idx) {
+        images.style.transform = `translateX(-${idx * 100}%)`;
+        indicators.forEach(ind => ind.classList.remove('active'));
+        indicators[idx].classList.add('active');
+    }
+
+    document.getElementById('next').addEventListener('click', () => {
+        index = (index + 1) % indicators.length;
+        showImage(index);
+    });
+
+    document.getElementById('prev').addEventListener('click', () => {
+        index = (index - 1 + indicators.length) % indicators.length;
+        showImage(index);
+    });
+
+    indicators.forEach((indicator, idx) => {
+        indicator.addEventListener('click', () => {
+            index = idx;
+            showImage(index);
+        });
+    });
+</script>
+
 </body>
 </html>
