--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
 <div class="carousel">
     <div class="carousel-images">
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
+        <img src="CARTON-001.png" alt="Image 1">
+        <img src="CARTON-002.png" alt="Image 2">
+        <img src="CARTON-003.png" alt="Image 3">
     </div>
     <div class="carousel-buttons">
         <button id="prev">&#10094;</button>
